--- a/Vagrant Manager/PreferencesWindow.xib
+++ b/Vagrant Manager/PreferencesWindow.xib
@@ -21,6 +21,7 @@
                 <outlet property="refreshEveryCheckBox" destination="7nP-b3-n2E" id="9Lm-iX-toQ"/>
                 <outlet property="sendProfileDataCheckBox" destination="oFT-5y-y4A" id="aSY-ti-ZFE"/>
                 <outlet property="showTaskNotificationCheckBox" destination="JCJ-oJ-Gl1" id="9YK-lx-oiR"/>
+                <outlet property="languagePopUpButton" destination="LNG-MN-8BT" id="LNG-Ot-8BT"/>
                 <outlet property="statusBarIconThemePopUpButton" destination="swb-Aa-PIS" id="On2-hu-OeB"/>
                 <outlet property="terminalEditorPreferencePopUpButton" destination="gkS-u3-8W8" id="WYk-Jq-2ex"/>
                 <outlet property="terminalPreferencePopUpButton" destination="5JC-yq-pDl" id="d4O-WE-EdO"/>
@@ -34,17 +35,17 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="1">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="761"/>
+            <rect key="contentRect" x="196" y="240" width="480" height="808"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <view key="contentView" id="2">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="761"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="808"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <box autoresizesSubviews="NO" borderType="line" titlePosition="noTitle" id="Y9d-dx-Ze1">
-                        <rect key="frame" x="17" y="59" width="446" height="684"/>
+                        <rect key="frame" x="17" y="59" width="446" height="731"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <view key="contentView" id="Vue-q7-c9k">
-                            <rect key="frame" x="3" y="3" width="440" height="678"/>
+                            <rect key="frame" x="3" y="3" width="440" height="725"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="21L-o8-sFd">
@@ -384,6 +385,32 @@
                                     </popUpButtonCell>
                                     <connections>
                                         <action selector="terminalEditorPreferencePopUpButtonClicked:" target="-2" id="qHM-NU-77T"/>
+                                    </connections>
+                                </popUpButton>
+                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="LNG-LB-8BT">
+                                    <rect key="frame" x="25" y="668" width="155" height="17"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Language:" id="LNG-LB-Cell">
+                                        <font key="font" metaFont="system"/>
+                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                    </textFieldCell>
+                                </textField>
+                                <popUpButton verticalHuggingPriority="750" id="LNG-MN-8BT">
+                                    <rect key="frame" x="191" y="661" width="211" height="26"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="LNG-MN-Cell">
+                                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                        <font key="font" metaFont="menu"/>
+                                        <menu key="menu" title="Language" id="LNG-MN-Menu">
+                                            <items>
+                                                <menuItem title="English" id="LNG-EN-Item"/>
+                                                <menuItem title="简体中文" id="LNG-ZH-Item"/>
+                                            </items>
+                                        </menu>
+                                    </popUpButtonCell>
+                                    <connections>
+                                        <action selector="languagePopUpButtonClicked:" target="-2" id="LNG-Ac-8BT"/>
                                     </connections>
                                 </popUpButton>
                                 <button id="5Jt-EP-9dG">
